tests/semantic/pass/selection_statement_block_scope.c
int main(void) {
  if (0) {
    int a;
    a = 0;
  } else {
    int a;
    a = 0;
  }
}
