tests/semantic/fail/selection_statement_block_scope3.c
int main(void) {
  if (0) {
      int a;
      a = 0;
    } else {
      return a;
    }
}
